# simple-cpp-messenger

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  bootstrap.sh
client/: CMakeLists.txt
client/src/: application.cpp  client.cpp
server/: CMakeLists.txt  server.cpp
server/src/: application.cpp  server.cpp
